force-app/main/default/objects/Lilly_Account_Team_Notes__c/Lilly_Account_Team_Notes__c.object-meta.xml
<CustomObject>
    <label>Account Team Notes</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Team Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>