force-app/main/default/objects/Lilly_Account_Team_Notes__c/fields/LilIy_Account__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Notes</relationshipLabel>
    <relationshipName>Account_Team_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>