force-app/main/default/objects/Lilly_Account_Team_Notes__c/fields/LilIy_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>Account Team Notes</relationshipLabel>
    <relationshipName>Account_Team_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>