force-app/main/default/objects/Lilly_Account_Team_Notes__c/fields/LilIy_Call__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call</label>
    <referenceTo>OCE__Call__c</referenceTo>
    <relationshipLabel>Account Team Notes</relationshipLabel>
    <relationshipName>Account_Team_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>