force-app/main/default/objects/Lilly_Account_Team_Notes__c/fields/LilIy_Note__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>