force-app/main/default/objects/Lilly_Account_Team_Notes__c/fields/LilIy_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Note_Date__c</fullName>
    <label>Note Date</label>
    <type>Date</type>
</CustomField>