force-app/main/default/objects/Lilly_Account_Team_Notes__c/fields/LilIy_Significance__c.field-meta.xml
<CustomField>
    <fullName>LilIy_Significance__c</fullName>
    <label>Significance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>